src/styles.scss
/* You can add global styles to this file, and also import other style files */

@import "app/vars.scss";

* {
  box-sizing: border-box;
}

body {
  background: $color-bg;
  color: $color-text;
  font-family: sans-serif;

  display: block;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
}

.app-container {
  position: relative;
  display: block;
  width: 100%;
  max-width: 50rem;
  min-height: 100%;
  padding: 1rem;
  margin: 0 auto;
}

.bottom-link {
  margin-top: 2rem;
}

a {
  color: $color-primary-dark;
  &:active {
    color: $color-primary-light;
  }
  &:visited {
    color: $color-primary-dark;
  }
}

// buttonz

button, input[type=button] {
  display: inline-block;
  // border: none;
  padding: 1rem 2rem;
  margin: 0;
  background: $color-bg;
  color: $color-text;
  font-family: sans-serif;
  font-size: 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.button {
  display: inline-block;
  padding: 1rem 3rem;
  border: thin solid $color-dark;
  text-decoration: none;

  cursor: pointer;
  text-align: center;

  box-shadow: $color-dark 0 0.6rem 1rem -0.4rem;
  border-radius: $border-radius;

  transition: background 250ms ease-in-out, 
              border-color 250ms ease-in-out,
              opacity 250ms ease-in-out,
              transform 150ms ease;

  font-family: inherit;
  background: inherit;
  color: inherit;
  font-size: inherit;
}

.button:not([disabled]):hover,
.button:not([disabled]):focus {
  background: #ddd;
}

.button:not([disabled]):focus {
  outline: 1px solid $color-primary-light;
  outline-offset: -4px;
}

.button:not([disabled]):active {
  transform: scale(0.99);
}

.button[disabled] {
  opacity: 0.5;
  box-shadow: #353230 0 0.2rem 1rem -0.4rem;
  cursor: auto;
}

.button--primary,
a.button--primary {
  background: $color-primary-dark;
  border-color: $color-primary-dark;
  color: $color-bg;

  &:not([disabled]):hover,
  &:not([disabled]):focus {
    background: #283233;
    border-color: #283233;
  }
}

.button--link {
  border: none;
  box-shadow: none;
  text-decoration: underline;
  background: none;

  &:not([disabled]):hover,
  &:not([disabled]):focus {
    background: none;
  }
}

// forms
.input-container {
  margin: 1rem 0;
}

.input-label {
  display: block;
}

.input-container--multi .input + .input-label {
  display: inline-block;
}

.input {
  min-width: 26rem;
  font-family: sans-serif;
  font-size: 0.9rem;
  border: thin solid $color-dark;
  background: none;
  padding: 0.6rem 0.5rem;
  margin-right: 0.2rem;
  border-radius: $border-radius;
  &:last-child {
    margin-right: 0;
  }
}

.input-textarea {
  min-width: 26rem;
  min-height: 12rem;
}

.input,
.button {
  & ~ & {
    margin-left: 1rem;
  }
}

.input,
.input-textarea {
  transition: 
    box-shadow 250ms ease,
    border-color 250ms ease;
  box-shadow: $color-error 0 0.2rem 1rem -1.3rem;

  &.ng-dirty.ng-touched.ng-invalid {
    border-color: $color-error;
    box-shadow: $color-error 0 0.2rem 1rem -0.3rem;
  }
}

fieldset {
  border: none;
  margin: 0;
  padding: 0;
}

legend {
  margin: 0;
  padding: 0;
  h3 {
    margin-bottom: 0;
  }
}

